--- a/assets/style/css/style.scss
+++ b/assets/style/css/style.scss
@@ -174,7 +174,7 @@ nav {
     text-decoration: none;
     font-size: 2rem;
     font-weight: 600;
-    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     transform: translateY(30px);
 }
@@ -205,6 +205,9 @@ nav {
 }
 .mobile-nav-overlay.active .mobile-nav-links a:nth-child(6) {
     transition-delay: 0.35s;
+}
+.mobile-nav-overlay.active .mobile-nav-links a:nth-child(7) {
+    transition-delay: 0.4s;
 }
 
 .mobile-nav-links a:hover {
@@ -954,9 +957,16 @@ nav {
 
 .contact-content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    max-width: 80%;
+    margin: auto;
     gap: 60px;
     margin-top: 60px;
+}
+
+@media (max-width: 600px) {
+    .contact-content {
+        max-width: 95%;
+    }
 }
 
 .contact-form {
@@ -1133,7 +1143,7 @@ footer {
 }
 
 /* Responsive Design */
-@media (max-width: 768px) {
+@media (max-width: 900px) {
     .nav-links {
         display: none;
     }
