--- a/assets/style/css/style.scss
+++ b/assets/style/css/style.scss
@@ -1337,7 +1337,7 @@ footer {
             margin: 0;
         }
         .experience-timeline {
-            margin-top: 20px;
+            margin-top: 5%;
         }
     }
     #projects {
