--- a/assets/style/css/style.scss
+++ b/assets/style/css/style.scss
@@ -399,6 +399,7 @@ nav {
 }
 
 .hero-text h1 {
+    font-family: "Inter", sans-serif;
     font-size: 3.5rem;
     font-weight: 700;
     margin-bottom: 20px;
