--- a/assets/style/css/style.scss
+++ b/assets/style/css/style.scss
@@ -5,6 +5,8 @@
 }
 
 body {
+    font-family: "Inter", sans-serif;
+    font-display: swap;
     background-color: #0d1117;
     color: #ffffff;
     line-height: 1.6;
